apps/production/homepage/homepage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v1.13.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config-volume
              subPath: bookmarks.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config-volume
              subPath: services.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config-volume
              subPath: kubernetes.yaml
            - mountPath: /app/config/docker.yaml
              name: homepage-config-volume
              subPath: docker.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config-volume
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config-volume
              subPath: widgets.yaml
            - mountPath: /app/config/custom.css
              name: homepage-config-volume
              subPath: custom.css
            - mountPath: /app/config/custom.js
              name: homepage-config-volume
              subPath: custom.js
            - mountPath: /app/config/proxmox.yaml
              name: homepage-config-volume
              subPath: proxmox.yaml
            - mountPath: /app/config/logs
              name: homepage-nfs-data
              subPath: logs
            - mountPath: /app/public/images
              name: homepage-nfs-data
              subPath: images
      volumes:
        - name: homepage-config-volume
          configMap:
            name: homepage
        - name: homepage-nfs-data
          persistentVolumeClaim:
            claimName: homepage-nfs-pvc
