apps/production/homepage/homepage-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
spec:
  selector:
    app: homepage
  ports:
  - port: 3000
    targetPort: 3000
