apps/production/homepage/homepage-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.mistyfumes.dev`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: prod-mistyfumes-tls
